--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -36,4 +37,3 @@
     "vite": "^5.4.3"
   }
 }
-
